# esp32

./: Cargo.toml  Makefile
.cargo/: config.toml
crates/digits/: Cargo.toml
crates/digits/src/: lib.rs
crates/esp32/: Cargo.toml
crates/esp32/src/: main.rs
crates/esp32/src/segment_display/: mod.rs
src/: main.rs
src/segment_display/: example.rs  mod.rs  numbers.rs
