[package]
name = "esp32"
version = "0.1.0"
authors = ["Thomas Sauvajon <thomas@sauvajon.tech>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
digits = { path = "../digits" }
esp-idf-svc = { version = "0.49", default-features = false }
log = { version = "0.4", default-features = false }

[build-dependencies]
embuild = "0.32.0"
